--- a/be/build.gradle
+++ b/be/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
-    id "org.sonarqube" version "3.0"
+    id 'org.sonarqube' version '3.3'
+    id 'jacoco'
 }
 
 group 'com.seed'
@@ -16,5 +17,77 @@ dependencies {
 }
 
 test {
+    testLogging {
+        showStandardStreams = true
+        showCauses = true
+        showExceptions = true
+        showStackTraces = true
+        exceptionFormat = 'full'
+    }
+
     useJUnitPlatform()
+}
+
+task testCoverage(type: Test) {
+    group 'verification'
+    description 'Runs the unit tests with coverage'
+
+    dependsOn(test, jacocoTestReport, jacocoTestCoverageVerification)
+    jacocoTestReport.mustRunAfter(test)
+    jacocoTestCoverageVerification.mustRunAfter(jacocoTestReport)
+}
+
+check {
+    dependsOn(testCoverage)
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "chess"
+
+        property "sonar.java.binaries", "${buildDir}/classes"
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.sources", "src/main/java"
+
+        property "sonar.tests", "src/test/java"
+        property "sonar.test.inclusions", "**/*Test.java"
+        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+    }
+}
+
+jacoco {
+    toolVersion = '0.8.7'
+}
+
+jacocoTestReport {
+    reports {
+        html.required = false
+        xml.required = true
+        csv.required = false
+    }
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            enabled = false
+            element = 'CLASS'
+
+            limit {
+                counter = 'BRANCH'
+                value = 'COVEREDRATIO'
+                minimum = 0.50
+            }
+
+            limit {
+                counter = 'LINE'
+                value = 'COVEREDRATIO'
+                minimum = 0.50
+            }
+        }
+    }
+}
+
+jar {
+    enabled = false
 }
